--- a/TaskManager.Web/Views/Account/Login.cshtml
+++ b/TaskManager.Web/Views/Account/Login.cshtml
@@ -15,7 +15,7 @@
         <form asp-action="Login" method="post" asp-route-returnUrl="@Model?.ReturnUrl" class="login-form">
             @Html.AntiForgeryToken()
              
-            <div asp-validation-summary="ModelOnly" class="alert alert-danger d-none"></div>
+            <div asp-validation-summary="ModelOnly" class="alert alert-danger "></div>
 
             <div class="form-group">
                 <label asp-for="Identifier" class="form-label">Username or Email</label>
