--- a/TaskManager.Web/Views/Projects/Details.cshtml
+++ b/TaskManager.Web/Views/Projects/Details.cshtml
@@ -59,6 +59,8 @@
 }
 
 
+
+
 <div class="row g-4">
 
     <div class="col-lg-3">
@@ -176,37 +178,33 @@
         }
     </div>
     <!--Task-->
-
     <div class="col-lg-6">
-        <div class="card">
-            <div class="card-header d-flex justify-content-between align-items-center">
+        <div class="card tasks-card">
+            <div class="card-header d-flex justify-content-between align-items-center tasks-card__header">
                 <h5 class="mb-0">Thông tin các công việc</h5>
-                @if (isOwner)
-                {
-                    <a class="btn btn-outline-secondary btn-sm"
+                <div class="d-flex gap-2">
+                    @if (isOwner)
+                    {
+                        <a class="btn btn-outline-secondary btn-sm"
+                           asp-controller="ProjectTasksPages"
+                           asp-action="Create"
+                           asp-route-projectId="@Model.Id">Thêm công việc</a>
+                    }
+                    <a class="btn btn-sm btn-primary"
                        asp-controller="ProjectTasksPages"
-                       asp-action="Create"
-                       asp-route-projectId="@Model.Id">Thêm công việc</a>
-
-                }
-                <a class="btn btn-sm btn-primary"
-                   asp-controller="ProjectTasksPages"
-                   asp-action="Index"
-                   asp-route-projectId="@Model.Id">
-                    Quản lí task
-                </a>
-            </div>
-
-
-            <div id="tasksContainer" class="card shadow-sm">
-                <div class="card-body">
-                    <div id="tasksTableHolder">Đang tải công việc…</div>
+                       asp-action="Index"
+                       asp-route-projectId="@Model.Id">
+                        Quản lí task
+                    </a>
                 </div>
             </div>
-            
-            
+
+            <div id="tasksScroll" class="card-body mb-0">
+                <div id="tasksTableHolder">Đang tải công việc…</div>
+            </div>
         </div>
     </div>
+
 
     <!--Comment-->
 
